Fix h2 size on mobile so the arrow won't wrap

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -303,6 +303,10 @@ hr {
         aspect-ratio: 1/1;
     }
 
+    .portfolio-section h2 {
+        font-size: 2.67rem;
+    }
+
     .shapes-triangle {
         border-left: 5vw solid transparent;
         border-right: 5vw solid transparent;
